# kanade

./: playground.ipynb  pyproject.toml  test.py
src/flywheel/fn/: harvest.py
src/kanade/analyser/: globals.py  signature.py  symbol.py  utils.py
src/kanade/analyser/context/: symbol_table.py  type_symbol.py
src/kanade/analyser/model/: spec.py  type.py
src/kanade/language/: python.py
src/kanade/signature/: __init__.py  base.py  error.py
src/kanade/signature_prototype/: base.py
src/kanade/typing/: symbol.py
src/kanade/typing/context/: type_symbol.py
tests/: test_signature.py  test_signature_base.py
