[project]
name = "kanade"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Elaina", email = "GreyElaina@outlook.com"},
]
dependencies = [
    "networkx>=3.3",
    "tree-sitter>=0.22.3",
    "tree-sitter-python @ git+https://github.com/tree-sitter/tree-sitter-python",
    "awaitlet>=0.0.1",
    "bidict>=0.23.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "pip>=24.1.1",
    "pytest>=8.2.2",
    "pytest-sugar>=1.0.0",
    "hypothesis>=6.108.2",
]

[tool.ruff]
line-length = 135
extend-include = ["I001"]